--- a/addons/clyde/plugin.cfg
+++ b/addons/clyde/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
-name="Clyde Dialogue"
-description="Interpreter and importer for Clyde Dialogue Language"
-author="Vinicius Gerevini"
-version="3.2.0"
+name="Super Clyde Dialogue"
+description="Interpreter and importer for Super Clyde Dialogue Language"
+author="Penelope Pagan June Sea Witch"
+version="4.0.0"
 script="plugin.gd"
