--- a/.gut_editor_config.json
+++ b/.gut_editor_config.json
@@ -31,12 +31,12 @@
  "post_run_script": "",
  "pre_run_script": "",
  "prefix": "test_",
- "selected": null,
+ "selected": "test_lexer.gd",
  "should_exit": false,
  "should_exit_on_success": true,
  "should_maximize": false,
  "show_help": false,
  "suffix": ".gd",
  "tests": [],
- "unit_test_name": null
+ "unit_test_name": "test_lexer_other_file_varaible"
 }
